[gd_scene format=3 uid="uid://cutv0mwelpiyy"]

[ext_resource type="Script" path="res://scripts/ui/ScheduleUI.gd" id="1_scheduleui"]

[node name="ScheduleUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_scheduleui")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
text = "Assign Schedules"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 50.0
offset_right = -220.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2

[node name="ArtistList" type="ItemList" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.0

[node name="CurrentActivityLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 400.0
offset_top = 60.0
offset_right = 580.0
offset_bottom = 90.0
text = "Current: Resting"

[node name="ActivityOptions" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 400.0
offset_top = 100.0
offset_right = 580.0
offset_bottom = 300.0

[node name="Label" type="Label" parent="Panel/ActivityOptions"]
layout_mode = 2
text = "Set New Activity:"

[node name="BtnRest" type="Button" parent="Panel/ActivityOptions"]
layout_mode = 2
text = "Rest"

[node name="BtnActing" type="Button" parent="Panel/ActivityOptions"]
layout_mode = 2
text = "Train Acting"

[node name="BtnSinging" type="Button" parent="Panel/ActivityOptions"]
layout_mode = 2
text = "Train Singing"

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_bottom = 30.0
grow_horizontal = 0
text = "X"

[connection signal="item_selected" from="Panel/HBoxContainer/ArtistList" to="." method="_on_artist_list_item_selected"]
[connection signal="pressed" from="Panel/ActivityOptions/BtnRest" to="." method="_on_set_rest_pressed"]
[connection signal="pressed" from="Panel/ActivityOptions/BtnActing" to="." method="_on_set_acting_pressed"]
[connection signal="pressed" from="Panel/ActivityOptions/BtnSinging" to="." method="_on_set_singing_pressed"]
[connection signal="pressed" from="Panel/CloseButton" to="." method="_on_close_button_pressed"]
